--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.2.1",
     "morgan": "^1.9.0",
     "oracledb": "^2.1.2"
   }
