--- a/NextGen/ormconfig.json
+++ b/NextGen/ormconfig.json
@@ -1,12 +1,12 @@
 {
     "type": "postgres",
-    "host": "host.docker.internal",
+    "host": "127.0.0.1",
     "port": 5432,
     "username": "postgres",
     "password": "postgres",
     "database": "salesdashboard",
     "synchronize": true,
-    "dropSchema": true,
+    "dropSchema": false,
     "logging": true,
     "entities": [
         "dist/entity/**/*.js"
