--- a/NextGen/package.json
+++ b/NextGen/package.json
@@ -6,26 +6,31 @@
     "scripts": {
         "compile": "tsc && node dist/server.js",
         "dev": "./node_modules/nodemon/bin/nodemon.js -e ts --exec \"npm run compile\"",
-        "test": "jest"
+        "uat": "node dist/server.js",
+        "test:ts": "tsc && jest ./dist/**/*.spec.js --runInBand",
+        "test": "jest ./dist/**/*.spec.js --runInBand"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "body-parser": "1.18.3",
+        "cors": "^2.8.5",
         "express": "^4.16.4",
-        "typeorm": "^0.2.16",
+        "morgan": "1.9.1",
         "pg": "^7.9.0",
         "reflect-metadata": "0.1.13",
-        "body-parser": "1.18.3",
-        "morgan": "1.9.1",
-        "cors": "2.8.5"
+        "typeorm": "^0.2.16"
     },
     "devDependencies": {
         "typescript": "^3.4.1",
         "nodemon": "^1.18.10",
+        "jest": "24.6.0",
+        "axios": "0.18.0",
         "@types/express": "^4.16.1",
         "@types/node": "11.13.0",
         "@types/pg": "7.4.14",
-        "jest": "24.6.0"
+        "@types/jest": "24.0.11",
+        "@types/axios": "0.14.0"
     }
 }
