--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,9 +4,24 @@ jobs:
     docker:
       - image: circleci/node:10.15.0
 
-    working_directory: /app
+      - image: circleci/postgres:9.6.5-alpine-ram
+        environment:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: salesdashboard
+
+    working_directory: ~/repo
 
     steps:
       - checkout
-      - run: npm install
-      - run: npm test
+      - run: ls
+      - run: cd NextGen && npm install
+      - run: npm run compile
+      - run:
+          command: cd NextGen && npm run:prod
+          background: true
+      - run:
+          shell: /bin/sh
+          command: 
+            wget --retry-connrefused --waitretry=1 --read-timeout=20 --timeout=15 -t 10 http://localhost:3000/api/v1/sales
+      - run: cd NextGen && npm test
