--- a/NextGen/package.json
+++ b/NextGen/package.json
@@ -4,9 +4,10 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "compile": "tsc && node dist/server.js",
-        "dev": "./node_modules/nodemon/bin/nodemon.js -e ts --exec \"npm run compile\"",
-        "uat": "node dist/server.js",
+        "start:dev": "./node_modules/nodemon/bin/nodemon.js -e ts --exec \"npm run run:dev\"",
+        "run:dev": "tsc && node dist/server.js",
+        "run:prod": "node dist/server.js",
+        "compile": "tsc",
         "test:ts": "tsc && jest ./dist/**/*.spec.js --runInBand",
         "test": "jest ./dist/**/*.spec.js --runInBand"
     },
@@ -20,17 +21,22 @@
         "morgan": "1.9.1",
         "pg": "^7.9.0",
         "reflect-metadata": "0.1.13",
-        "typeorm": "^0.2.16"
+        "typeorm": "^0.2.16",
+        "axios": "^0.18.0",
+        "faker": "^4.1.0"
     },
     "devDependencies": {
         "typescript": "^3.4.1",
         "nodemon": "^1.18.10",
         "jest": "24.6.0",
         "axios": "0.18.0",
+        "supertest": "4.0.2",
+        "@types/supertest": "2.0.7",
         "@types/express": "^4.16.1",
         "@types/node": "11.13.0",
         "@types/pg": "7.4.14",
         "@types/jest": "24.0.11",
-        "@types/axios": "0.14.0"
+        "@types/axios": "0.14.0",
+        "@types/faker": "^4.1.5"
     }
 }
